<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#FFFFFF"
    >
    
    <LinearLayout
        android:layout_weight="1.4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="90dp"
	        android:src="@drawable/saplogo"/>
        </LinearLayout>
    

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:padding="20dip"
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/corner"
            android:orientation="vertical"
             >

            <TextView
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/user"
                android:textColor="#FFFFFF"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/inputUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:textSize="14dp" >
            </EditText>

            <TextView
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp" >
            </EditText>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout android:id="@+id/validation_bar"
					android:orientation="horizontal" 
					android:layout_height="fill_parent"
					android:layout_width="fill_parent"
					android:layout_weight="1.9" 
					android:paddingRight="5dip" 
					android:paddingLeft="5dip" 
					android:paddingTop="10dip">
			
				<Button android:layout_height="wrap_content" 
				    android:text="@string/cancelar"
					android:layout_weight="0.5" 
					android:layout_width="fill_parent"
					android:id="@+id/btCancel"></Button>
				
				<Button android:layout_height="wrap_content" 
				    	android:text="@string/entrar"
						android:layout_weight="0.5" 
						android:layout_width="fill_parent"
						android:id="@+id/btEnter"></Button>				
		</LinearLayout>
		
</LinearLayout>
