<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="142dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:src="@drawable/topo" android:layout_weight="1" android:paddingLeft="10dp" android:paddingRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="315dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/corner"
            android:orientation="vertical"
            android:padding="20dip" >

            <TextView
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/user"
                android:textColor="#FFFFFF"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/inputUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:singleLine="true"
                android:textSize="14dp" >
            </EditText>

            <TextView
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="14dp" >
            </TextView>

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:password="true"
                android:textSize="14dp" >
            </EditText>

            <CheckBox
                android:id="@+id/checkLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Manter Login" />

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout android:id="@+id/validation_bar"
					android:orientation="horizontal" 
					android:layout_height="fill_parent"
					android:layout_width="fill_parent"
					android:layout_weight="1.9" 
					android:paddingRight="5dip" 
					android:paddingLeft="5dip" 
					android:paddingTop="10dip">
			
				<Button android:layout_height="wrap_content" 
				    android:text="@string/cancelar"
					android:layout_weight="0.5" 
					android:layout_width="fill_parent"
					android:id="@+id/btCancel"></Button>
				
				<Button android:layout_height="wrap_content" 
				    	android:text="@string/entrar"
						android:layout_weight="0.5" 
						android:layout_width="fill_parent"
						android:id="@+id/btEnter"></Button>				
		</LinearLayout>
		
</LinearLayout>
