<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#0a2673"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activityVacation"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24dp" />

    </LinearLayout>
			<LinearLayout 
			    android:orientation="vertical"  
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent"
				android:layout_weight="1.4" android:padding="5dp">
				
			    <TextView 
			        android:layout_width="fill_parent" 
			        android:paddingBottom="10dip"
					android:layout_height="wrap_content" 
					android:text="@string/manager" 
					android:textColor="#000000"
					android:textStyle="bold"
					android:textSize="20dp">
			    </TextView>
			    
				<EditText 
				    android:id="@+id/inputManager" 
				    android:layout_width="fill_parent" 
				    android:paddingBottom="10dip"
					android:layout_height="wrap_content" 
					android:editable="false"
					android:clickable="false"
					android:focusable="false"
					android:textSize="14dp" ></EditText>
				
			    <TextView 
			        android:layout_width="fill_parent" 
			        android:paddingBottom="10dip"
					android:layout_height="wrap_content" 
					android:text="@string/department" 
					android:textColor="#000000"
					android:textStyle="bold"
					android:textSize="20dp"></TextView>
			    
				<EditText 
				    android:id="@+id/inputDepartment" 
				    android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:editable="false"
					android:clickable="false"
					android:focusable="false" 
					android:textSize="14dp" ></EditText>
				
			</LinearLayout>
			
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >
			
	        <LinearLayout 
	         		android:layout_weight="1" 
					android:orientation="vertical" 
					android:layout_height="fill_parent" 
					android:layout_width="fill_parent">
					
		            <RadioGroup 
		                android:layout_width="fill_parent"
		                android:layout_height="fill_parent" 
		                android:orientation="vertical"
		                android:gravity="center_vertical" >
		 
		                <TextView 
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:text="Período:" 
		                    android:textColor="#000000"
		                    android:layout_gravity="center"
	                        android:textStyle="bold"
							android:textSize="20dp"/>
		 
		                <RadioButton 
		                    android:id="@+id/rbOneWeek"
		                    android:checked="false"
		                    android:textColor="#000000"
		                    android:text="1 semana"/>
		 
		                <RadioButton 
		                    android:id="@+id/rbTwoWeek"
		                    android:checked="false"
		                    android:textColor="#000000"
		                    android:text="2 semanas"/>
		 
		                <RadioButton 
		                    android:id="@+id/rbThreeWeek"
		                    android:checked="false"
		                    android:textColor="#000000"
		                    android:text="3 semanas"/>
		                
		                <RadioButton 
		                    android:id="@+id/rbFourWeek"
		                    android:checked="false"
		                    android:textColor="#000000"
		                    android:text="4 semanas"/>
		 
	      			</RadioGroup>
				</LinearLayout>
				
	        	<LinearLayout 
	        	    android:layout_weight="1" 
					android:orientation="vertical" 
					android:layout_height="fill_parent"
					android:layout_width="fill_parent">
		            
				    <TextView
				    	android:layout_width="fill_parent"
		                android:layout_height="wrap_content" 
		                android:text="Data de início:"
		                android:textSize="20dp"
		                android:textColor="#000000"
		                android:textStyle="bold"/>
		            
				     <EditText 
				         android:id="@+id/inputDate"
				         android:layout_width="fill_parent"
		                 android:layout_height="wrap_content"
		                 android:layout_gravity="center"
		                 android:editable="false"
		                 android:cursorVisible="false"/>
				    
				</LinearLayout>  
		</LinearLayout>
			

	<LinearLayout
		android:orientation="horizontal" 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_weight="0"
		android:padding="5dp">
	
		<Button 
		    android:id="@+id/btReject"
		    android:text="@string/cancel"
		    android:layout_height="wrap_content" 
			android:layout_weight="0.5" 
			android:layout_width="fill_parent">
		</Button>
		
		<Button
		    android:id="@+id/btAccept" 
		    android:text="@string/confirm"
		    android:layout_height="wrap_content" 
			android:layout_weight="0.5" 
			android:layout_width="fill_parent">
		</Button>				
	</LinearLayout>

</LinearLayout>